--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://graphicon.io
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :title/
 permalink_defaults:
 
 # Directory
@@ -62,6 +62,8 @@ pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
+plugins:
+  - hexo-generator-robotstxt
 ## Themes: https://hexo.io/themes/
 theme: apollo
 # theme: landscape
@@ -70,3 +72,22 @@ theme: apollo
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type:
+
+# Sitemap
+sitemap:
+    path: sitemap.xml
+# robotstxt
+# hexo robots.txt
+User-agent: *
+Allow: /
+Allow: /categories/
+Allow: /tags/
+Allow: /archives/
+Allow: /about/
+
+Disallow: /vendors/
+Disallow: /js/
+Disallow: /css/
+Disallow: /fonts/
+Disallow: /vendors/
+Disallow: /fancybox/
