--- a/_config.yml
+++ b/_config.yml
@@ -76,18 +76,19 @@ deploy:
 # Sitemap
 sitemap:
     path: sitemap.xml
-# robotstxt
 # hexo robots.txt
-User-agent: *
-Allow: /
-Allow: /categories/
-Allow: /tags/
-Allow: /archives/
-Allow: /about/
-
-Disallow: /vendors/
-Disallow: /js/
-Disallow: /css/
-Disallow: /fonts/
-Disallow: /vendors/
-Disallow: /fancybox/
+robotstxt:
+  useragent: "*"
+  disallow:
+    - /js/
+    - /css/
+    - /fonts/
+    - /vendors/
+    - /fancybox/
+  allow:
+    - /
+    - /about/
+    - /archives/
+    - /tags/
+    - /categories/
+  sitemap: /sitemap.xml
