--- a/_config.yml
+++ b/_config.yml
@@ -63,8 +63,8 @@ pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
-plugins:
-  - hexo-generator-robotstxt
+# plugins:
+#   - hexo-generator-robotstxt
 ## Themes: https://hexo.io/themes/
 theme: apollo
 # theme: landscape
