--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -17,4 +17,4 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Tag", name: "tag", widget: "string"}
- 
+      - {label: "Body", name: "body", widget: "markdown"}
